Fix some suggestions buttons alignment issues

--- a/transifex/addons/suggestions/static/suggestions/css/lotte_suggestions.css
+++ b/transifex/addons/suggestions/static/suggestions/css/lotte_suggestions.css
@@ -52,7 +52,7 @@
 
 .suggestion_text, .suggestion_textarea {
   min-width: 520px;
-  max-width: 600px;
+  max-width: 560px;
   padding-bottom: 1em;
   padding-top: 1em;
   margin-right: 2em;
@@ -129,7 +129,8 @@ a.vote_up_trigger img, a.vote_down_trigger img {
 }
 
 .suggestion_select_button, .suggestion_select_current {
-  width: 140px;
+
+  width: 100px;
   text-align: center;
   height: 100%;
   float: right;
@@ -143,4 +144,5 @@ a.vote_up_trigger img, a.vote_down_trigger img {
 
 .suggestion_select_current {
   margin-right: 25px;
+  margin-top: 15px;
 }
